[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurofusion"
version = "1.0.0"
description = "Uncertainty-aware multimodal AI for longitudinal mental-health research"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Foysal Abdullah Al"}]
license = {text = "MIT"}
dependencies = [
  "numpy>=1.24,<3",
  "pandas>=2.0,<3",
  "scikit-learn>=1.3,<2",
  "joblib>=1.3,<2",
  "pyyaml>=6,<7",
  "fastapi>=0.110,<1",
  "uvicorn[standard]>=0.27,<1",
  "pydantic>=2.5,<3",
  "streamlit>=1.31,<2",
  "plotly>=5.18,<7",
  "matplotlib>=3.7,<4"
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "httpx>=0.27,<1",
  "ruff>=0.5,<1"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["data", "artifacts"]
